# CSCE-642-Continual-Learning

./: .gitignore  README.rst  TODO.rst  pyproject.toml
docs/: Environment Configuration.md  resco.slurm
docs/source/: conf.py  installation.rst  resco_benchmark.agents.rst  resco_pubs.rst
resco_benchmark/: main.py  multi_signal.py  traffic_signal.py
resco_benchmark/agents/: advanced_xlight.py  agent.py  bc.py  coin_plus.py  colight.py  dual_coin.py  fixed.py  fma2c.py  ma2c.py  maxpressure.py  maxwave.py  mplight.py  multiheaded_dqn.py  pfrl_cbpdqn.py  pfrl_dqn.py  pfrl_ppo.py  tabular_q.py
resco_benchmark/agents/cbp_layers/: cbp_conv.py  (+1 more)
resco_benchmark/config/: agent.yaml  config.py  config.yaml  optuna_objectives.py  pretty_names.yaml  signal.yaml
resco_benchmark/experiment_runner/: actions.py  algorithms.py  common.py  continual.py  fixed_explorer.py  germany.py  optuna.py  resco.slurm  rewards.py  saltlake.py  step_off.py  trained_eval.py
resco_benchmark/mdp_options/: actions.py  rewards.py  states.py
resco_benchmark/utils/: add_flow.py  csv_to_flo.py  explorers.py  graph.py  graph_curriculum.bak  hourly_demand_graph.py  logs.py  scraper.py  utils.py
results/IDQN-tr0-cologne3-0-drq_norm-wait_norm/: tripinfo_1.xml
results/IDQN-tr0-ingolstadt1-0-drq_norm-wait_norm/: metrics_1.csv  metrics_2.csv  tripinfo_1.xml  tripinfo_2.xml  tripinfo_3.xml
results/IDQN-tr0-ingolstadt21-21-drq_norm-wait_norm/: metrics_1.csv  metrics_10.csv  metrics_11.csv  metrics_12.csv  metrics_2.csv  metrics_3.csv  metrics_4.csv  metrics_5.csv  metrics_6.csv  metrics_7.csv  metrics_8.csv  metrics_9.csv  tripinfo_1.xml  tripinfo_10.xml  tripinfo_11.xml  tripinfo_12.xml  tripinfo_13.xml  tripinfo_2.xml  tripinfo_3.xml  tripinfo_4.xml  tripinfo_5.xml  tripinfo_6.xml  tripinfo_7.xml  tripinfo_8.xml  tripinfo_9.xml
results/IDQN-tr0-ingolstadt7-7-drq_norm-wait_norm/: metrics_1.csv  tripinfo_1.xml  tripinfo_2.xml
(+391 files in other folders)
