[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['resco_benchmark']

[tool.setuptools.package-data]
resco_benchmark = ['environments/**']

[project]
name = "resco-benchmark"
version = "2.0.0"
description = "The Reinforcement Lear`ning Benchmarks for Traffic Signal Control (RESCO)"
authors = [{ name = "James Ault", email = "jault@tamu.edu" }]
urls = { homepage = "https://u.tamu.edu/pistar", repository = "https://github.com/Pi-Star-Lab/RESCO" }

readme = "README.md"
license = { file = "LICENSE" }

keywords = [
    "traffic control", "traffic signal control", "traffic signal", "traffic", "traffic light", "intersection",
    "reinforcement", "reinforcement learning", "machine learning", "artificial intelligence", "benchmark",
    "RL benchmark", "RL", "deep RL", "deep reinforcement learning", "neural network"
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable", "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Education", "Intended Audience :: Science/Research", "Operating System :: OS Independent",
    "Programming Language :: Python :: 3", "Topic :: Adaptive Technologies", "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
    ]

requires-python = ">=3.6"
dependencies = [
        'numpy>=1.16.5, <2.0.0',
        'matplotlib',
        'torch>=1.8.1',     # TODO make this optional
        'gym>=0.22.0',
        'pfrl>=0.2.1',      # TODO make this optional
        'eclipse-sumo>=1.17',
        'traci',
        'libsumo',
        'joblib',
        'GitPython',        # TODO Make git optional
        'quik_config'
    ]

[project.optional-dependencies]
fma2c = ['tensorflow==1.15.5']
optuna = ['optuna', 'pymysql', 'cmaes']
docs = ['sphinx', 'sphinx-rtd-theme']